@@ -150,6 +150,11 @@
 				<a href="user/diagrams/Diagrams.html#Connections">Connections</a> section of the Preferences.
 			</li>
 			<li><span class="label label-info">Modified</span> When the end-user changes the routing style of an edge into Oblique style (from a different style), the edge is now transformed into an oblique line without intermediate bendpoints.</li>
+			<li><span class="label label-info">Modified</span> In sequence diagrams, the labels of operands (sections inside combined fragments) could be partially hidden by other diagram elements, for exemple executions:</li>
+		</ul> 
+		<img border="0" src="images/operand_label_before.png"/> They are now drawn on top of the rest of the diagram elements so that they are always completely visible: 
+		<img border="0" src="images/operand_label_after.png"/>
+		<ul>
 			<li><span class="label label-danger">Removed</span> The feature concerning the capability to move labels on border of node, or border node, all around the node, added in 6.3.0, has been reverted. There are unexpected side effects (wrong location after a rename of a label for example).</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
